Align Hero section better, Fix bug related to spacing

--- a/themes/basakbeykoz/react-src/src/body/_body_page_home.scss
+++ b/themes/basakbeykoz/react-src/src/body/_body_page_home.scss
@@ -96,7 +96,7 @@
                                     ". paragraph"
                                     ". buttons";
                                 grid-template-columns: #{$homeWelcomeImageX} 1fr;
-                                grid-template-rows: #{$navSocialSpaceX} auto auto min-content;
+                                grid-template-rows: #{$logoNSocialY} auto auto #{$logoNSocialY};
                             }
 
                             @include wideScreen() {
